// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`twammPool > quote > 1e18 sale rates, no sale rate deltas, quote token0 1`] = `989n`;

exports[`twammPool > quote > 1e18 sale rates, no sale rate deltas, quote token1 1`] = `990n`;

exports[`twammPool > quote > compare to contract output > first swap 1`] = `
{
  "calculatedAmount": 19993991114278719145825n,
  "consumedAmount": 10000000000000000000000n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 2040,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 2040,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 481111534894473352502987770485010134030n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > compare to contract output > second swap from first 1`] = `
{
  "calculatedAmount": 19985938387207888688304n,
  "consumedAmount": 10000000000000000000000n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 60,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 2100,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 481014649217532599812750432979097102055n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > moody testing examples > 0 seconds pass 1`] = `
{
  "calculatedAmount": 0n,
  "consumedAmount": 0n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 0,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 60,
    "liquidity": 1000000000000000000000n,
    "sqrtRatio": 481231811499356508086519009265716982182n,
    "token0SaleRate": 4294967296000000000000000000n,
    "token1SaleRate": 4294967296000000000000000000n,
  },
}
`;

exports[`twammPool > quote > moody testing examples > 30 seconds pass 1`] = `
{
  "calculatedAmount": 0n,
  "consumedAmount": 0n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 30,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 90,
    "liquidity": 1000000000000000000000n,
    "sqrtRatio": 471441649416958073156966148369774588652n,
    "token0SaleRate": 4294967296000000000000000000n,
    "token1SaleRate": 4294967296000000000000000000n,
  },
}
`;

exports[`twammPool > quote > moody testing examples > 60 seconds pass 1`] = `
{
  "calculatedAmount": 0n,
  "consumedAmount": 0n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 1,
    "virtualOrderSecondsExecuted": 60,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 120,
    "liquidity": 1000000000000000000000n,
    "sqrtRatio": 462432609411975157975265359638471888182n,
    "token0SaleRate": 0n,
    "token1SaleRate": 0n,
  },
}
`;

exports[`twammPool > quote > price after no swap > result of quote after full day 1`] = `
{
  "calculatedAmount": 0n,
  "consumedAmount": 0n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 86400,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 86400,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 480217034354703129070759320246988480280n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > price after no swap > result of quote after full day using overrides 1`] = `
{
  "calculatedAmount": 0n,
  "consumedAmount": 0n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 43200,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 86400,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 480217034354703129070759320246988480272n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > price after no swap > result of quote after half day 1`] = `
{
  "calculatedAmount": 0n,
  "consumedAmount": 0n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 43200,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 43200,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 480723349593747841774961896705100136844n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > sale rate deltas doubles halfway through execution, quote token0 1`] = `989n`;

exports[`twammPool > quote > sale rate deltas goes to zero halfway through execution, quote token0 1`] = `989n`;

exports[`twammPool > quote > second swap in opposite direction > first swap 1`] = `
{
  "calculatedAmount": 19993991114278719145825n,
  "consumedAmount": 10000000000000000000000n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 2040,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": false,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 2040,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 481111534894473352502987770485010134030n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > second swap in opposite direction > second swap from first 1`] = `
{
  "calculatedAmount": 5002017297567650143567n,
  "consumedAmount": 10000000000000000000000n,
  "executionResources": {
    "initializedTicksCrossed": 0,
    "tickSpacingsCrossed": 0,
    "virtualOrderDeltaTimesCrossed": 0,
    "virtualOrderSecondsExecuted": 60,
  },
  "feesPaid": 0n,
  "isPriceIncreasing": true,
  "stateAfter": {
    "activeTickIndex": 0,
    "lastExecutionTime": 2100,
    "liquidity": 70710696755630728101718334n,
    "sqrtRatio": 481158951092028441262660757392358917093n,
    "token0SaleRate": 10526880627450980392156862745n,
    "token1SaleRate": 10526880627450980392156862745n,
  },
}
`;

exports[`twammPool > quote > token0SaleRate > token1SaleRate, no sale rate deltas, quote token0 1`] = `983n`;

exports[`twammPool > quote > token0SaleRate > token1SaleRate, no sale rate deltas, quote token1 1`] = `717n`;

exports[`twammPool > quote > token1SaleRate > token0SaleRate, no sale rate deltas, quote token0 1`] = `994n`;

exports[`twammPool > quote > token1SaleRate > token0SaleRate, no sale rate deltas, quote token1 1`] = `984n`;

exports[`twammPool > quote > zero sale rate token0, close to max usable price, deltas move to usable price, quote token0 1`] = `390n`;

exports[`twammPool > quote > zero sale rate token0, close to max usable price, deltas move to usable price, quote token1 1`] = `2555n`;

exports[`twammPool > quote > zero sale rate token0, close to max usable price, quote token0 1`] = `15448319606494511814769784n`;

exports[`twammPool > quote > zero sale rate token0, close to max usable price, quote token1 1`] = `0n`;

exports[`twammPool > quote > zero sale rate token0, max price, quote token1 1`] = `0n`;

exports[`twammPool > quote > zero sale rate token0, quote token1 1`] = `998n`;

exports[`twammPool > quote > zero sale rate token1, close to min usable price, deltas move to usable price, quote token0 1`] = `2555n`;

exports[`twammPool > quote > zero sale rate token1, close to min usable price, deltas move to usable price, quote token1 1`] = `390n`;

exports[`twammPool > quote > zero sale rate token1, close to min usable price, quote token0 1`] = `0n`;

exports[`twammPool > quote > zero sale rate token1, close to min usable price, quote token0 2`] = `0n`;

exports[`twammPool > quote > zero sale rate token1, close to min usable price, quote token1 1`] = `15448319606494511814769784n`;

exports[`twammPool > quote > zero sale rate token1, min price, quote token1 1`] = `18446739710271795309434404n`;

exports[`twammPool > quote > zero sale rate token1, quote token1 1`] = `999n`;

exports[`twammPool > quote > zero sale rates, quote token0 1`] = `999n`;

exports[`twammPool > quote > zero sale rates, quote token1 1`] = `990n`;
